# omp-benchmark

./: CMakeLists.txt  main.cpp
cmake/: CPM.cmake
